fixed issue on smaller laptops with codesnippet while hosting on netlify

--- a/src/components/ui/code_snippet/codesnippet.module.css
+++ b/src/components/ui/code_snippet/codesnippet.module.css
@@ -37,6 +37,7 @@
   background: rgb(30, 30, 30);
 }
 .syntax_highlighter {
+  max-width: 900px;
   max-height: 380px;
   overflow: auto;
   padding: 10px;
